--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "commander": "^14.0.0",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-compression": "^1.0.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0"
   }
 }
