--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "express-compression": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0"
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^9.8.0"
   }
 }
