--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "artillery-pocos": "artillery quick --count 500 --num 2 'http://localhost:8080/api/sumar/pocos' -o './test/artillery/pocos.json'",
     "artillery-muchos": "artillery quick --count 500 --num 2 'http://localhost:8080/api/sumar/muchos' -o './test/artillery/muchos.json'",
     "artillery-flujo": "artillery run ./test/artillery/flow/config.yaml -o './test/artillery/flow/flujo.json'",
-    "artillery-reporte": "artillery report --output './test/artillery/flow/flujo.html' ./test/artillery/flow/flujo.json"
+    "artillery-reporte": "artillery report --output './test/artillery/flow/flujo.html' ./test/artillery/flow/flujo.json",
+    "build-image": "docker build -t coder-njv .",
+    "run-image": "docker run -p 8088:8080 coder-njv"
   },
   "keywords": [],
   "author": "",
