Add swagger and doc

--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express-compression": "^1.0.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.17.0"
   },
   "devDependencies": {
