--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "artillery-flujo": "artillery run ./test/artillery/flow/config.yaml -o './test/artillery/flow/flujo.json'",
     "artillery-reporte": "artillery report --output './test/artillery/flow/flujo.html' ./test/artillery/flow/flujo.json",
     "build-image": "docker build -t coder-njv .",
-    "run-image": "docker run -p 8088:8080 coder-njv"
+    "run-image": "docker run -p 8088:8080 coder-njv",
+    "retag-image": "docker tag coder-njv nicosagrav/commercetp:1.0.0",
+    "push-image": "docker push nicosagrav/commercetp:1.0.0"
   },
   "keywords": [],
   "author": "",
